--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react-webpack-rails",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "react_webpack_raiils integration - js part",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "compile": "babel --presets es2015 -d lib/ src/",
+    "prepublish": "npm run compile",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +24,18 @@
   "bugs": {
     "url": "https://github.com/mxaly/rwr-integration/issues"
   },
-  "homepage": "https://github.com/mxaly/rwr-integration#readme"
+  "homepage": "https://github.com/mxaly/rwr-integration#readme",
+  "preDependencies": {
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.3.14"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.4.0",
+    "babel-core": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13"
+  }
 }
