--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13"
+    "babel-preset-react": "^6.3.13",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.1.0",
+    "eslint-plugin-react": "^3.15.0"
   }
 }
